--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.scss
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.scss
@@ -110,7 +110,7 @@ $execute-height: 36px;
 
 #execute{
 	width: 100%;
-	background-color:$color5;
+	background-color:$pcolor3;
 	color: white;
 	height: $execute-height;
 	align-self: flex-end;
