--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
@@ -16,6 +16,9 @@
 			<mat-button-toggle value="4" class="viewer-toggle-btn" matTooltip="Help" >
 			  <mat-icon>help_outline</mat-icon>
 			</mat-button-toggle>
+			<mat-button-toggle value="5" class="viewer-toggle-btn" matTooltip="Function Help" >
+			  <mat-icon>help_outline</mat-icon>
+			</mat-button-toggle>
 		</div>
 		<div class = "btn-grp2">
 			<mat-button-toggle value="1" id="codeViewer" class="viewer-toggle-btn" matTooltip="Code Viewer">
