--- a/src/app/ui-components/controls/modulebox/modulebox.component.html
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.html
@@ -1,5 +1,11 @@
 <div class="toolbox">
-	<div class = "toolbox-content">					
+	<div class = "toolbox-content">
+		<div class="inOutBtns">
+			<span class="fn_name disabled" (click)="addPort(node_index, 'in')">Add Input</span>
+			<span class ="fn_name disabled" (click)="addPort(node_index, 'out')">Add Output</span>
+		</div>
+		<hr>
+
 		<mat-list condensed>
 			<mat-list-item class="fn_name" *ngFor="let type of procedureTypes"
 								 		(click)="addProcedure($event, type)">{{getImageForType(type)}}</mat-list-item>
