--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 $color1: #395D73;
 $color2: #8AA8C0;
-$color3: #E0E0E0; //#B9DCF5;
+$color3: #F1F1F1; //#E0E0E0; //#B9DCF5;
 $color4: #F0BFA0;
 $color5: #F07A79;
 
