--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,6 +12,8 @@ $pcolor4: #3CB4CB; //lightblue
 $pcolor5: #16434B; //darkgreenishblue
 
 $header-height: 30px;
+$fsize1: 15px;
+$fsize2: 12px;
 
 $toolbar-color: #F7F7F7;
 $toolbar-height: 45px;
