--- a/src/app/ui-components/console/console.component.scss
+++ b/src/app/ui-components/console/console.component.scss
@@ -23,15 +23,20 @@
 	
 		.time{
 			min-width: 50%;
-			font-size: 10px; 
+			font-size: 10px;
+			//flex-grow: 10;
+			//flex-shrink: 0;
 			color: $color5 !important;
-			display: flex;
-			flex-flow: row-reverse nowrap;
 		}
 
 		.message{
-			min-width: 50%;
-			font-size: 12px; 
+			min-width: auto;
+			font-size: $fsize2; 
+			display: flex;
+			//flex-grow: 1;
+			//flex-shrink: 1;
+			flex-flow: row nowrap;
+			//justify-content: flex-end;
 			color: $color1 !important;
 		}
 	}
