--- a/src/app/ui-components/viewers/code-viewer/code-viewer.component.scss
+++ b/src/app/ui-components/viewers/code-viewer/code-viewer.component.scss
@@ -7,6 +7,8 @@
 	height: 100%; 
 	width: 100%; 
 	
+	box-sizing: border-box !important;
+	padding-bottom: 2*$header-height !important;
 	.ace-editor{
 		height: 100%;
 	}
