--- a/src/app/ui-components/viewers/text-viewer/text-viewer.component.scss
+++ b/src/app/ui-components/viewers/text-viewer/text-viewer.component.scss
@@ -20,13 +20,13 @@
 		margin-right: $default-side-padding;
 		width: 100%;
 		color: $color5;
-		font-size: 10px;
+		font-size: $fsize2;
 	}
 
 }
 
 span{
-	font-size: 16px;
+	font-size: $fsize1;
 
 	display: block;
 	border-bottom: 1px solid $color2;
