help docs from json

--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.scss
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.scss
@@ -2,33 +2,36 @@
 
 .viewer{
 	@extend .viewer;
-	display: flex !important;
-	flex-flow: column nowrap !important;
 
-	height: 100% !important;
-	padding-top: $default-side-padding;
-	box-sizing: border-box !important;
-	padding-bottom: 2*$header-height;
+	padding: 30px;
+	overflow: auto;
+	// display: flex !important;
+	// flex-flow: column nowrap !important;
 
-	h1{
-		padding-left: $default-side-padding;
-		padding-bottom: 5px;
-		color: $color1;
-		display: block;
-		border-bottom: 1px solid $color3;
-		flex-grow: 0 !important;
-		flex-shrink: 1 !important;
-	}
+	// height: 100% !important;
+	// padding-top: $default-side-padding;
+	// box-sizing: border-box !important;
+	// padding-bottom: 2*$header-height;
 
-	.iframe-container{
-		height: 100%;
-		width: 100%;
+	// h1{
+	// 	padding-left: $default-side-padding;
+	// 	padding-bottom: 5px;
+	// 	color: $color1;
+	// 	display: block;
+	// 	border-bottom: 1px solid $color3;
+	// 	flex-grow: 0 !important;
+	// 	flex-shrink: 1 !important;
+	// }
 
-		flex-shrink: 1 !important;
-		flex-grow: 0 !important;
-		iframe{
-			height: 100%; 
-			width: 100%;
-		}
-	}
+	// .iframe-container{
+	// 	height: 100%;
+	// 	width: 100%;
+
+	// 	flex-shrink: 1 !important;
+	// 	flex-grow: 0 !important;
+	// 	iframe{
+	// 		height: 100%; 
+	// 		width: 100%;
+	// 	}
+	// }
 }
