--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
@@ -1,6 +1,33 @@
 <div class="viewer">
+	
 	<h1> Welcome to Mobius! </h1>
 	<!-- <div class="iframe-container">
 		<iframe [src]="_url" frameborder="0"></iframe>
 	</div> -->
+	<mat-accordion>
+	 	<mat-expansion-panel *ngFor="let m of _helpMods">
+	    	<mat-expansion-panel-header>
+	    		<mat-panel-title>
+			      {{ getModName(m.name) }} 
+			    </mat-panel-title>
+			    <mat-panel-description>
+			      {{m.comment.shortText}}
+			    </mat-panel-description>
+	    	</mat-expansion-panel-header>
+
+			<mat-list>
+				<h3 mat-subheader>Functions</h3>
+			 	<mat-list-item *ngFor="let fn of m.children"> 
+			 		<h4 mat-line>{{fn.name}}</h4>
+    				<p mat-line>{{fn.signatures[0].comment.shortText}}</p>
+    				<p mat-line>{{fn.signatures[0].comment.returns}}</p>
+    				<p mat-line><a href="https://phtj.github.io/gs-modelling/docs/modules/{{getUrl(m.name, fn.name)}}" target="_blank">More</a></p>
+			 	</mat-list-item>
+			 	<mat-divider></mat-divider>
+			</mat-list>
+
+	 	</mat-expansion-panel>
+
+	</mat-accordion>
+
 </div>
