--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -97,10 +97,10 @@
 										<mat-icon *ngIf='!node.isDisabled()'>check_circle</mat-icon>
 										<mat-icon *ngIf='node.isDisabled()'>highlight_off</mat-icon>
 									</div>
-									<!-- <div class="action-button" (click)="saveNode(node_index)" 
+									<div class="action-button" (click)="saveNode(node_index)" 
 										*ngIf="!isSaved(node)">
 										<mat-icon>file_download</mat-icon>
-									</div> -->
+									</div>
 								</div>
 							</div>
 
