--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
@@ -26,8 +26,9 @@
 					<div class='port input' *ngFor="let inp of _inputs; let i=index"><div class="content">
 						<div class='row'>
 							<!--<span class='label'>Name</span>-->
-							<span class='content' contenteditable="true" (blur)="updatePortName($event, inp)">
-								{{ inp.getName() || "undefined" }}
+							<span class='content' contenteditable="true" (blur)="updatePortName($event, inp)"
+								style="border-bottom: 1px solid gray;">
+								{{ inp.getName() }}
 							</span>
 						</div>
 
@@ -42,8 +43,9 @@
 
 						<div class='row'>
 							<!--<span class='label'>Default</span>-->
-							<span class='content' contenteditable="true" (blur)="updateDefaultValue($event, inp)">
-								{{inp.getDefaultValue() || "undefined"}}
+							<span class='content' contenteditable="true" (blur)="updateDefaultValue($event, inp)"
+								style="border-bottom: 1px solid gray;">
+								{{inp.getDefaultValue()}}
 							</span>
 						</div>	
 						</div>			
