--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
@@ -13,11 +13,11 @@
 			<mat-button-toggle value="3" class="viewer-toggle-btn" matTooltip="Console">
 			  <mat-icon>info_outline</mat-icon>
 			</mat-button-toggle>
-			<mat-button-toggle value="4" class="viewer-toggle-btn" matTooltip="Help" >
+			<mat-button-toggle value="4" class="viewer-toggle-btn" matTooltip="Function Help" >
 			  <mat-icon>help_outline</mat-icon>
 			</mat-button-toggle>
-			<mat-button-toggle value="5" class="viewer-toggle-btn" matTooltip="Function Help" >
-			  <mat-icon>help_outline</mat-icon>
+			<mat-button-toggle value="5" class="viewer-toggle-btn" matTooltip="About Mobius" >
+			  <mat-icon>info</mat-icon>
 			</mat-button-toggle>
 		</div>
 		<div class = "btn-grp2">
