--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
@@ -17,11 +17,13 @@
 
 			<mat-list>
 				<h3 mat-subheader>Functions</h3>
-			 	<mat-list-item *ngFor="let fn of m.children"> 
-			 		<h4 mat-line>{{fn.name}}</h4>
-    				<p mat-line>{{fn.signatures[0].comment.shortText}}</p>
-    				<p mat-line>{{fn.signatures[0].comment.returns}}</p>
-    				<p mat-line><a href="https://phtj.github.io/gs-modelling/docs/modules/{{getUrl(m.name, fn.name)}}" target="_blank">More</a></p>
+			 	<mat-list-item *ngFor="let fn of m.children">
+			 		<div class = "content">
+				 		<h4 mat-line>{{fn.name}}</h4>
+	    				<p mat-line>{{fn.signatures[0].comment.shortText}}</p>
+	    				<p mat-line>{{fn.signatures[0].comment.returns}}</p>
+	    				<p mat-line><a href="https://phtj.github.io/gs-modelling/docs/modules/{{getUrl(m.name, fn.name)}}" target="_blank">More</a></p>
+    				</div>
 			 	</mat-list-item>
 			 	<mat-divider></mat-divider>
 			</mat-list>
