--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
@@ -9,6 +9,11 @@
 	span.function{
 		color: $pcolor4 !important;
 		font-weight: bold;
+
+	}
+	span.equal{
+		text-align: center;
+		width: 15px;
 	}
 }
 
@@ -22,6 +27,20 @@
 	}
 }
 
+mat-expansion-panel-header{
+	background-color: $color3 !important;
+	border-top: 1px solid $color2 !important;
+	border-bottom: 1px solid $color2 !important;
+	padding-left: $default-side-padding !important;
+	mat-panel-title{
+		color: $color1 !important;
+		font-weight: bold !important;
+		font-size: $fsize2 !important;
+	}
+	&:hover{
+		background-color: $color3 !important;
+	}
+}
 /*
 .viewer{
 	@extend .viewer;
