--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.scss
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.scss
@@ -62,6 +62,9 @@ $execute-height: 36px;
 			}*/
 			.value{
 				//padding: $default-side-padding;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				.content{
 					vertical-align: center;
 					input{
