--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.scss
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.scss
@@ -12,6 +12,10 @@
 	mat-icon{
 		color:$color2;
 		height: $header-height !important;
+		display: flex !important;
+		align-items: center !important;
+		justify-content: center !important;
+		font-size: $fsize1;
 	}
 
 	&:hover{
@@ -21,6 +25,9 @@
 	}
 	.mat-button-toggle{
 		height: $header-height !important;
+		//display: flex !important;
+		//align-items: top !important;
+		//justify-content: center !important;
 	}
 
 	.mat-button-toggle-disabled{
