--- a/src/app/ui-components/console/console.component.scss
+++ b/src/app/ui-components/console/console.component.scss
@@ -11,7 +11,7 @@
 
 	.message-container{
 		display: flex;
-		flex-flow: row wrap;
+		flex-flow: column wrap;
 		margin: $default-side-padding/2;
 		justify-content: space-between;
 
@@ -20,23 +20,21 @@
 
 		padding: 0 5 0 0 !important;
 		border-bottom: 1px solid $color2;
+		font-family: 'Ubuntu Mono', monospace;
 	
 		.time{
 			min-width: 50%;
 			font-size: 10px;
+			white-space: nowrap;
 			//flex-grow: 10;
 			//flex-shrink: 0;
-			color: $color5 !important;
+			color: grey !important;
 		}
 
 		.message{
 			min-width: auto;
 			font-size: $fsize2; 
-			display: flex;
-			//flex-grow: 1;
-			//flex-shrink: 1;
-			flex-flow: row nowrap;
-			//justify-content: flex-end;
+			white-space: nowrap;
 			color: $color1 !important;
 		}
 	}
