accordions for functions

--- a/src/app/ui-components/controls/modulebox/modulebox.component.scss
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.scss
@@ -42,4 +42,15 @@
 			}
 		}
 	}
+
+	span.module{
+		color: $pcolor2 !important;
+		font-weight: bold;
+	}
+
+	span.function{
+		color: $pcolor4 !important;
+		font-weight: bold;
+
+	}
 }
