--- a/src/app/ui-components/controls/modulebox/modulebox.component.html
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.html
@@ -13,11 +13,30 @@
 
 		<hr/>
 
-		<mat-list condensed>
-		 	<mat-list-item class="fn_name" *ngFor="let fn of _moduleList" (click)="addActionProcedure(fn);"> 
-		 		{{ fn.module }}::{{ fn.name }} 
-		 	</mat-list-item>
-		</mat-list>
+		<mat-accordion multi="true" [displayMode]="flat">
+
+				<!-- inputs -->
+				<mat-expansion-panel [expanded]="true" *ngFor="let cat of _category">
+					
+					<mat-expansion-panel-header>
+						<mat-panel-title>
+						  {{ cat }} 
+						</mat-panel-title>
+						<mat-panel-description>
+						  <!-- This is a summary of the content -->
+						</mat-panel-description>
+					</mat-expansion-panel-header>
+
+					<mat-list condensed>
+					 	<mat-list-item class="fn_name" *ngFor="let fn of _moduleList[cat]" (click)="addActionProcedure(fn);"> 
+					 		<span class="module">{{ fn.module }}</span>.<span class="function">{{ fn.name }}</span>
+					 	</mat-list-item>
+					</mat-list>
+
+				</mat-expansion-panel>
+				
+		</mat-accordion>
+		
 	</div>
 </div>
 
